# erojaya

./: README.md
doc/: ConfigServer.odt  eclipse workspace.txt  manual.odt
src/eros/cv/ball_perceptor/: CMakeLists.txt  package.xml
src/eros/cv/calibration/: CMakeLists.txt  calibellipse.cpp  calibellipse.h  calibimagewidget.h  calibration.cpp  calibration.h  calibrationnodelet.cpp  calibrationnodelet.h  calibscene.cpp  calibscene.h  calibview.h  calibwidget.cpp  calibwidget.h  cameraparamswidget.cpp  cameraparamswidget.h  histwidget.h  nodelet_plugins.xml  playbackcontrol.cpp  playbackcontrol.h  troubleshooting.txt
src/eros/cv/cam_calibration/: CMakeLists.txt  Readme.txt  calibration.cpp  calibration.sh  package.xml
src/eros/cv/camera_v4l2/: CMakeLists.txt  camera_v4l2.cpp  camera_v4l2.h  configmanager.cpp  nodelet_plugins.xml  troubleshooting.txt
src/eros/cv/classificator/: CMakeLists.txt  classificator.cpp  nodelet_plugins.xml
src/eros/cv/cmvision/: CMakeLists.txt  colors.txt  package.xml  troubleshooting.md
src/eros/cv/display_image/: CMakeLists.txt  display_image.cpp  imagewidget.cpp  nodelet_plugins.xml
src/eros/cv/display_image/include/display_image/: display_image.h  imagewidget.h
src/eros/cv/display_image/launch/: display_image.launch  display_image_camera_v4l2.launch  display_image_nodelet.launch
src/eros/cv/field_perceptor/: CMakeLists.txt  detectfield.h  package.xml
src/eros/cv/nodelet_gui_manager/: CMakeLists.txt  nodelet_gui_manager.cpp  qtguithread.cpp
src/eros/cv/nodelet_gui_manager/include/nodelet_gui_manager/: qtguithread.h
src/eros/cv/print_fps/: CMakeLists.txt  nodelet_plugins.xml  package.xml  print_fps.cpp  print_fps.h
src/eros/cv/soccer_vision/: CMakeLists.txt  Objects.lut  maskForCamera  package.xml  plugin.xml
src/eros/cv/soccer_vision/launch/: test_soccer_vision.launch  test_soccer_vision_bag.launch  test_soccer_vision_gui.launch  test_soccer_vision_robotcontrol.launch
src/eros/cv/soccer_vision/src/: camera_parameters.cpp  findBall.cpp  findField.cpp  findField.h  frameGrabber.h  globaldefinitions.h  soccer_vision.cpp  soccer_vision.h  soccercv_gui.cpp
src/eros/cv/state_publisher/: CMakeLists.txt  package.xml  readme.txt
src/eros/launch/: CMakeLists.txt
src/eros/launch/complete/: test.launch
src/eros/launch/config/: server.launch
src/eros/launch/cv/: cv.launch
src/eros/launch/hardware/: robot_dummy.launch  robot_dummy_motiontest.launch
src/eros/launch/visualization/: trajectory_editor.launch
src/eros/localization/field_model/: CMakeLists.txt
src/eros/localization/loc_display/: CMakeLists.txt
src/eros/localization/loc_display/field/ogre/scripts/: field.material
src/eros/localization/loc_display/src/: loc_display.cpp
src/eros/localization/particle_filter/: CMakeLists.txt
src/eros/motion/gait/: CMakeLists.txt  troubeshooting.txt
src/eros/motion/gait/src/: gait.cpp
src/eros/motion/motion_player/: CMakeLists.txt
src/eros/tools/trajectory_editor/: CMakeLists.txt  troubleshooting.txt
src/eros_platform/eros/: CMakeLists.txt  package.xml
src/eros_platform/eros/launch/: eros_intelligent.launch  eros_main_cli.launch  eros_main_gui.launch  soccer_vision_cli.launch  soccer_vision_gui.launch
src/eros_platform/eros/src/: list2.cpp  talker.cpp
src/eros_platform/settings/: CMakeLists.txt  camera_setting.yaml  package.xml
src/eros_platform/settings/launch/: camera_c920.launch  capture.launch  kepala.launch
src/eros_robotcontrol/config_server/: CMakeLists.txt  package.xml
src/eros_robotcontrol/config_server/src/: configserver.cpp
src/eros_robotcontrol/contrib/rbdl/: CMakeLists.txt
src/eros_robotcontrol/hardware/cm730/: CMakeLists.txt
src/eros_robotcontrol/hardware/eros_model/: CMakeLists.txt  package.xml
src/eros_robotcontrol/hardware/nimbro_op_model/: CMakeLists.txt  package.xml
src/eros_robotcontrol/hardware/robotcontrol/: CMakeLists.txt  package.xml
src/eros_robotcontrol/hardware/servomodel/: CMakeLists.txt
src/eros_robotcontrol/hardware/timer/: CMakeLists.txt
src/nimbro/behaviour/behaviour_control/: CMakeLists.txt
src/nimbro/behaviour/state_controller/: CMakeLists.txt
src/nimbro/cv/cv_matlab/: cameraparams.m  testfuncs.m
src/nimbro/cv/vision_module/: CMakeLists.txt  package.xml  troubleshooting.txt
src/nimbro/hardware/cm730/: CMakeLists.txt
src/nimbro/hardware/diagnostics/: CMakeLists.txt
src/nimbro/hardware/nimbro_op_gazebo/: CMakeLists.txt
src/nimbro/hardware/nimbro_op_gazebo/launch/: nimbro_op.launch
src/nimbro/hardware/nimbro_op_interface/: CMakeLists.txt  package.xml  plugin_robotcontrol.xml
src/nimbro/hardware/nimbro_op_interface/include/nimbro_op_interface/: erosinterface.h  robotinterface.h
src/nimbro/hardware/nimbro_op_interface/src/: dummyinterface.cpp  erosinterface.cpp  robotinterface.cpp
src/nimbro/hardware/usb2dyna/: CMakeLists.txt  package.xml
src/nimbro/hardware/usb2dyna/include/usb2dyna/: CM730.h  CM740mp.h
src/nimbro/hardware/usb2dyna/src/: CM730.cpp  CM740mp.cpp  megapacket_thread.cpp  read_thread.cpp
src/nimbro/launch/config/: config_server.launch  config_xs0.yaml  field_model.yaml  robot_param.launch
src/nimbro/launch/cv/: camera_calib.launch  dummy_camera_calib.launch  dummy_vision_module.launch  vision_module.launch
src/nimbro/localization/field_model/: CMakeLists.txt
src/nimbro/localization/loc_display/: CMakeLists.txt  troubleshooting.txt
src/nimbro/localization/loc_display/src/: loc_display.cpp
src/nimbro/motion/gait/: CMakeLists.txt
src/nimbro/motion/motion_player/: CMakeLists.txt
src/nimbro/scripts/: set_camera.py  set_cm7X0.py  set_usb2dyna.py
src/nimbro/tools/bag_from_images/: CMakeLists.txt  package.xml
src/nimbro/tools/control_widget/: CMakeLists.txt
src/nimbro/tools/rqt_brviz/: CMakeLists.txt
src/nimbro_config_server/config_server/: CMakeLists.txt
src/nimbro_config_server/parameter_tuner/: CMakeLists.txt  troubleshooting.txt
src/nimbro_vis/plot_msgs/: CMakeLists.txt
src/nimbro_vis/plotter/: CMakeLists.txt
src/nimbro_vis/rqt_log_viewer/: CMakeLists.txt
src/nimbro_vis/vis_utils/: CMakeLists.txt
(+257 files in other folders)
