<?xml version="1.0"?>
<package>
	<name>soccer_vision</name>
	<version>0.0.0</version>
	<description>EROS computer vision</description>

	<maintainer email="pastrana@ais.uni-bonn.de">Julio Pastrana</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>field_model</build_depend>
	<build_depend>ball_perceptor</build_depend>
	<run_depend>nodelet</run_depend>	
	<run_depend>roscpp</run_depend>
	<run_depend>ball_perceptor</run_depend>
	<export>
	  <nodelet plugin="${prefix}/plugin.xml" />
	</export>
</package>
